--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@
     justify-content: space-between;
     height: fit-content;
     width: 100%;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-family: 'Bronzion';
     color: rgb(255, 255, 255);
     /* text-shadow: 0px 0px 30px #ff0000; */
@@ -81,7 +81,9 @@
   }
 
   .navigation-item:hover {
-    text-shadow: #ffffff;
+    /* text-shadow: #ffffff; */
+    text-shadow: 0px 0px 30px #ff0000;
+
   }
 
   .navigation-item.active{
@@ -137,7 +139,7 @@
     z-index: 1;
     position: absolute;
     font-size: 3rem;
-    top: 35%;
+    top: 30%;
   }
 
   .image {
@@ -233,14 +235,27 @@
   .project-caption {
     visibility: hidden;
     position: absolute;
-    text-align: center;
+    text-align: start;
+    min-width: 500px;
     padding: 5px 10px;
-    margin-top: -300px;
-    padding: 3rem;
+    
+    /* margin-right: -600px; */
+    margin-top:-300px;
+    padding: 4rem;
 
     font-family: 'Boone', sans-serif !important;
-    font-size: 2rem;
+    font-size: 1rem;
     color: rgb(255, 255, 255);
+  }
+
+  .project-caption h1{
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .project-caption h2{
+    font-size: 1rem;
+    margin-left: 2rem;
   }
 
   #backgroundDiv1{
@@ -295,7 +310,7 @@
   }
 
   .project:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
   
   .card-1{
