--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
   }
 
   .section {
-    min-height: max(100vw, 100vh);
+    min-height: calc(max(100vw, 100vh) + 200px);
     padding: 0;
     width: 100vw;
     position: relative;
@@ -85,10 +85,23 @@
     color: inherit;
     text-decoration: none;
     transition: 0.2s;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
   }
 
   .navigation-item:hover {
     /* text-shadow: #ffffff; */
+    text-shadow: 0px 0px 30px #ff0000;
+
+  }
+
+  nav-link:hover{
+    text-shadow: 0px 0px 30px #ff0000;
+
+  }
+
+  dropdown-menu:hover{
     text-shadow: 0px 0px 30px #ff0000;
 
   }
@@ -145,9 +158,17 @@
   .intro{
     z-index: 1;
     position: absolute;
-    font-size: 3rem;
-    top: 30%;
+    
+    top: 27%;
     padding: 1rem;
+  }
+
+  .intro h2{
+    font-size: 3rem;
+  }
+
+  .intro h4{
+    font-size: 1.5rem;
   }
 
   .image {
@@ -348,9 +369,48 @@
     pointer-events: none;
   }
 
-  @media (max-width: 768px) {
+  .typewriter-container {
+    z-index: 5000;
+    font-size: 2rem;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+  }
+  
+  .cursor {
+    font-weight: normal;
+    font-size: 2rem;
+    color: #ffffff;
+    margin-left: 2px;
+    animation: blink 0.8s infinite;
+  }
+  
+  @keyframes blink {
+    0%, 50% {
+      opacity: 1;
+    }
+    51%, 100% {
+      opacity: 0;
+    }
+  }
+
+  @media (max-width: 1000px) {
 
     .navigation{
       font-size: 1rem;
     }
+    .intro h2{
+      font-size: 1.5rem;
+    }
+  
+    .intro h4{
+      font-size: 1rem;
+    }
+
+    .typewriter-container {
+      font-size: 1rem;
+    }
+
   }
+
+
