--- a/styles.css
+++ b/styles.css
@@ -407,6 +407,9 @@
 
 
   @media (max-width: 750px) {
+    .intro{
+      top:30%
+    }
 
     .intro h2{
       font-size: 1.5rem;
@@ -448,6 +451,31 @@
     .intro{
       background-color: rgba(36, 36, 138, 0.5);
       border-radius: 10px;
+    }
+
+    .image-1 {
+      z-index: 2;
+      width: 500px; 
+      animation: move-image1 20s linear infinite; 
+      top: 20%; 
+      opacity: 0.5;
+    }
+  
+    .image-2 {
+      z-index: 2;
+      width: 300px; 
+      animation: move-image2 25s linear infinite; 
+      top: 40%; 
+      opacity: 0.5;
+    }
+  
+    .image-3 {
+      z-index: 2;
+      width: 400px;
+      animation: move-image3 19s linear infinite; 
+      top: 40%; 
+      transform: -300px;
+      opacity: 0.5;
     }
   
   }
